--- a/src/view/ordenes_compra/verOrdenCompra/ViewOrdenes.css
+++ b/src/view/ordenes_compra/verOrdenCompra/ViewOrdenes.css
@@ -1,6 +1,3 @@
-.button {
-    padding-top: 1.5%;
-}
 
 .block_border {
     border-style: solid;
@@ -14,4 +11,23 @@
     padding-top: 1%;
     padding-left: 2%;
     padding-right: 2%;
+}
+
+.buttons{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    justify-items: center;
+    
+}
+
+.header{
+margin-top: 2%;
+display: flex;
+justify-content: center;
+justify-items: center;
+
+}
+.tittle{
+
 }
